Configure BackendApplicationTests.java